minor findbugs suggestion