@@ -24,10 +24,9 @@ public class JAliEnCommandscrlog extends JAliEnBaseCommand {
 	/**
 	 * the HashMap for the log screens
 	 */
-	private static HashMap<Integer, List<String>> scrlogs = new HashMap<Integer, List<String>>(
-			10);
+	private static HashMap<Integer, List<String>> scrlogs = new HashMap<Integer, List<String>>(10);
 
-	private Integer logno = new Integer(-1);
+	private Integer logno = Integer.valueOf(-1);
 
 	/**
 	 * execute the sclog
